--- a/data/language-specs/alusus.lang
+++ b/data/language-specs/alusus.lang
@@ -2,7 +2,7 @@
 <!--
  Alusus Language Sytnax Highlighting
  Author: Sarmad Khalid Abdullah <sarmad@alusus.org>
- Copyright (C) 2021 Sarmad Khalid Abdullah <sarmad@alusus.org>
+ Copyright (C) 2023 Sarmad Khalid Abdullah <sarmad@alusus.org>
 -->
 <language id="alusus" _name="Alusus" version="2.0" _section="Sources">
   <metadata>
@@ -117,8 +117,10 @@
       <keyword>init</keyword>
       <keyword>preprocess</keyword>
       <keyword>ast</keyword>
+      <keyword>ast_ref</keyword>
       <keyword>as_ptr</keyword>
       <keyword>set_ptr</keyword>
+      <keyword>no_injection</keyword>
     </context>
 
     <context id="ar-block-keyword" style-ref="block-keyword">
@@ -160,8 +162,10 @@
       <keyword>هيئ</keyword>
       <keyword>تمهيد</keyword>
       <keyword>شبم</keyword>
+      <keyword>سند_شبم</keyword>
       <keyword>كمؤشر</keyword>
       <keyword>حدد_مؤشر</keyword>
+      <keyword>بلا_حقن</keyword>
     </context>
 
     <context id="constant" style-ref="constant">
